--- a/index.html
+++ b/index.html
@@ -246,7 +246,29 @@
         </div>
       </div>
     </section>
+     <!-- What we do -->
+    <section id="what" class="section">
+      <div class="container">
+        <div class="section-head reveal">
+          <h2>About Us</h2>
+          <p>
+            We are a 3rd year BS Computer Science Student who wants to develop a predictive model that can analyze chest X-rays and estimate the risk of lung cancer within 1 to 3 years. Our goal is to support earlier screening decisions and improve patient outcomes by providing actionable insights from routine imaging.
+          </p>
+        </div>
 
+        <div class="grid-3">
+          <article class="feature-card reveal">
+            <h3>Jaymar MAruji</h3>
+            <p>The Founder and CEO.</p>
+          </article>
+
+          <article class="feature-card reveal">
+            <h3>Bradnil S. Tumalon</h3>
+            <p>CTO of PneuScan AI.</p>
+          </article>
+        </div>
+      </div>
+    </section>
     <!-- CTA -->
     <section id="cta" class="section">
       <div class="container cta reveal">
